--- a/src/Dotnet9.Tools.Web/Shared/Public/PublicFooter.razor
+++ b/src/Dotnet9.Tools.Web/Shared/Public/PublicFooter.razor
@@ -28,6 +28,7 @@
             "" +
             "", "https://docs.microsoft.com/zh-cn/aspnet/core/blazor/?view=aspnetcore-6.0"),
         new("Masa Blazor", "https://masa-blazor-docs-dev.lonsid.cn/"),
+        new("懒得勤快", "https://ldqk.xyz/"),
         new("markdig", "https://github.com/xoofx/markdig"),
         new("prism", "https://github.com/PrismJS/prism")
     };
