--- a/src/Dotnet9.Tools.Web/Pages/Public/Blogs/Album.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Blogs/Album.razor
@@ -1,4 +1,4 @@
-﻿@page "/album"
+﻿@page "/album/{slug?}"
 @using Dotnet9.Tools.Web.Shared.Public
 @using Dotnet9.Tools.Web.Models
 @layout DocLayout
@@ -8,7 +8,6 @@
 @code {
 
     [Parameter]
-    [SupplyParameterFromQuery]
     public string? Slug { get; set; }
 
     [CascadingParameter]
@@ -21,11 +20,11 @@
         return MainLayout?.T(key) ?? string.Empty;
     }
 
-    protected override async Task OnInitializedAsync()
+    protected override async Task OnParametersSetAsync()
     {
         if (string.IsNullOrWhiteSpace(Slug))
         {
-            _items = ConstDatas.AlbumTreeItems!.Select(x => new CardItem(x.Name, "", x.Cover, $"/album?slug={Slug}")).ToList();
+            _items = ConstDatas.AlbumTreeItems!.Select(x => new CardItem(x.Name, "", x.Cover, $"/album/{x.Slug}")).ToList();
         }
         else
         {
@@ -33,9 +32,9 @@
             if (album == null) return;
 
             var posts = ConstDatas.BlogPostItems!.FindAll(x => x.Albums != null && x.Albums.Contains(album.Name));
-            _items = posts.Select(x => new CardItem(x.Title, x.Description, x.Cover, $"/post?slug={x.Slug}")).ToList();
+            _items = posts.Select(x => new CardItem(x.Title, x.Description, x.Cover, $"/post/{x.Slug}")).ToList();
         }
-        await base.OnInitializedAsync();
+        await base.OnParametersSetAsync();
     }
 
 }
