--- a/src/Dotnet9.Tools.Web/Pages/Public/Blogs/Category.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Blogs/Category.razor
@@ -24,7 +24,7 @@
     {
         if (string.IsNullOrWhiteSpace(Slug))
         {
-            _items = ConstDatas.CategoryNotTreeItems!.Select(x => new CardItem(x.Name, "No description", "http://api.btstu.cn/sjbz/?lx=m_meizi", $"/cat/{x.Slug}")).ToList();
+            _items = ConstDatas.CategoryNotTreeItems!.Select(x => new CardItem(x.Name, "No description", "https://api.ixiaowai.cn/gqapi/gqapi.php", $"/cat/{x.Slug}")).ToList();
         }
         else
         {
