update tool markdown;

--- a/src/Dotnet9.Tools.Web/Pages/Public/Tools/ImageTools/IcoTool.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Tools/ImageTools/IcoTool.razor
@@ -45,8 +45,8 @@
     </MCol>
 </MRow>
 
-<MarkdownComponent
-    LocalPostFilePath="wwwroot/doc/blog_contents/uploads/2022/02/2022-02-22_02.md"
+<ToolMarkdown
+    LocalPostFilePath="wwwroot/doc/blog_contents/uploads/2022/02/2022-02-22_01.md"
     RemotePostUrl="https://dotnet9.com/1715"
     SourceCodeUrl="https://github.com/dotnet9/dotnet9.com/blob/develop/src/Dotnet9.Tools.Web/Pages/Public/ImageTools/IcoTool.razor"/>
 
