--- a/src/Dotnet9.Tools.Web/Shared/Public/ToolMarkdown.razor
+++ b/src/Dotnet9.Tools.Web/Shared/Public/ToolMarkdown.razor
@@ -1,5 +1,4 @@
-﻿@using Markdig
-<MRow>
+﻿<MRow>
     <MCol>
         <MButton
             Depressed Color="primary"
@@ -28,18 +27,7 @@
 {
     <MRow>
         <MCol>
-            <div class="line-numbers">
-                @{
-                    if (_hasXss)
-                    {
-                        @_postHtmlContent.ToString()
-                    }
-                    else
-                    {
-                        @_postHtmlContent
-                    }
-                }
-            </div>
+            <D9Markdown LocalPostFilePath="@LocalPostFilePath" />
         </MCol>
     </MRow>
 
@@ -85,54 +73,10 @@
     public PublicLayout? MainLayout { get; set; }
 
     private bool _showPost;
-
-    private bool _hasXss { get; set; }
-
-    private MarkupString _postHtmlContent;
-
-    [Inject]
-    private IJSRuntime _jsRuntime { get; set; }
-
-    protected override async Task OnInitializedAsync()
-    {
-        var markdownData = await File.ReadAllTextAsync(LocalPostFilePath);
-        var htmlData = Markdown.ToHtml(markdownData);
-        if (htmlData.Contains("<script") || htmlData.Contains("<link"))
-        {
-            _hasXss = true;
-        }
-        _postHtmlContent = (MarkupString) htmlData;
-    }
-
-    protected override async Task OnAfterRenderAsync(bool firstRender)
-    {
-        await _jsRuntime.InvokeVoidAsync("Prism.highlightAll");
-    }
+    
 
     public string? T(string key)
     {
         return MainLayout?.T(key);
     }
 }
-
-<style>
-    h3 {
-        border-bottom: 1px solid #eee;
-        margin-top: 50px;
-        padding-bottom: 10px;
-    }
-
-    pre {
-        background: #1E1E1E;
-        color: #eee;
-        overflow-x: auto;
-        padding: 0.5em !important;
-        white-space: pre;
-        word-break: normal;
-        word-wrap: normal;
-    }
-
-    img, video, source { max-width: 100% }
-
-    pre > code { white-space: pre; }
-</style>
