--- a/src/Dotnet9.Tools.Web/Pages/Public/Index.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Index.razor
@@ -3,7 +3,7 @@
 @using BlazorComponent
 @layout PublicLayout
 
-<PageTitle>@T("Dotnet9ToolsTitle") - @T("Home")</PageTitle>
+<PageTitle>@T("Home") - @T("Dotnet9ToolsTitle")</PageTitle>
 
 <MRow Class="banner" NoGutters Align="AlignTypes.Center" Justify="JustifyTypes.Center">
     <MCol Align="@AlignTypes.Center" Lg="6" Md="6" Sm="12">
