--- a/src/Dotnet9.Tools.Web/Pages/Public/Tools/ToolIndex.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Tools/ToolIndex.razor
@@ -3,7 +3,7 @@
 @using Dotnet9.Tools.Web.Shared.Public
 @layout DocLayout
 
-<CardItemList Title="@T("Dotnet9ToolsTitle")" Items="_tools"/>
+<CardItemList Title="@T("Tools")" Items="_tools"/>
 
 @code {
 
