--- a/src/Dotnet9.Tools.Web/Shared/Public/CardItemList.razor
+++ b/src/Dotnet9.Tools.Web/Shared/Public/CardItemList.razor
@@ -1,7 +1,7 @@
 ﻿@using Dotnet9.Tools.Web.Models
 @layout DocLayout
 
-<PageTitle>@T("Dotnet9ToolsTitle") - @Title</PageTitle>
+<PageTitle>@Title - @T("Dotnet9ToolsTitle")</PageTitle>
 
 <MRow>
     @if (Items != null)
