--- a/src/Dotnet9.Tools.Web/Shared/Public/DocLayout.razor
+++ b/src/Dotnet9.Tools.Web/Shared/Public/DocLayout.razor
@@ -2,8 +2,8 @@
 @layout PublicLayout
 
 
-<MContainer Class="pa-4 pa-sm-6 pa-md-8" Fluid>
-    <MResponsive MaxWidth="868" Class="mx-auto overflow-visible">
+<MContainer Class="pa-4 pa-sm-6 pa-md-8">
+    <MResponsive Class="mx-auto overflow-visible">
         @Body
     </MResponsive>
 </MContainer>
