--- a/src/Dotnet9.Tools.Web/Pages/Public/Tools/ToolIndex.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Tools/ToolIndex.razor
@@ -3,7 +3,10 @@
 @using Dotnet9.Tools.Web.Shared.Public
 @layout DocLayout
 
+<h1 style="text-align: center">@T("Tools")</h1>
+
 <CardItemList Title="@T("Tools")" Items="_tools"/>
+
 
 @code {
 
@@ -19,8 +22,8 @@
 
     protected override async Task OnInitializedAsync()
     {
-        _tools.Add(new CardItem(T("IcoToolTitle"), T("IcoToolDesc"), "doc/blog_contents/uploads/2022/02/cover_13.jpg", "/ico"));
-        _tools.Add(new CardItem(T("TimestampToolTitle"), T("TimestampToolDesc"), "doc/blog_contents/uploads/2022/02/cover_17.jpeg", "/timestamp"));
+        _tools.Add(new CardItem(T("IcoToolTitle"), "/ico", T("IcoToolDesc"), "/ico", "doc/blog_contents/uploads/2022/02/cover_13.jpg"));
+        _tools.Add(new CardItem(T("TimestampToolTitle"), "/timestamp", T("TimestampToolDesc"), "/timestamp", "doc/blog_contents/uploads/2022/02/cover_17.jpeg"));
 
         await base.OnInitializedAsync();
     }
