--- a/src/Dotnet9.Tools.Web/Shared/Public/CardItemList.razor
+++ b/src/Dotnet9.Tools.Web/Shared/Public/CardItemList.razor
@@ -6,23 +6,28 @@
 <MRow>
     @if (Items != null)
     {
-        @foreach (var tool in Items)
+        @foreach (var item in Items)
         {
-            <MCol key="@tool.Title" Class="col-xl-3 col-lg-4 col-sm-6 col-12 text-truncate">
+            <MCol key="@item.FirstTitle" Class="col-xl-3 col-lg-4 col-sm-6 col-12 text-truncate">
                 <MCard Class="m-0 p-0" Outlined>
-                    <MImage Src="@tool.Cover" Class="white--text align-end" Gradient="to bottom, rgba(0,0,0,.1), rgba(0,0,0,.5)" Height=150>
-                        <MToolbarTitle Class="ml-0 mt-1 mb-1 pt-0 pb-0 pl-2 text-h6 white--text bg-black bg-opacity-25">
-                            <a style="text-decoration: none; color: #fff;" href="cat/@tool.Url">WPF</a>
-                        </MToolbarTitle>
+                    <MImage Src="@(item.Cover ?? ConstDatas.DynamicImageApi)" Class="white--text align-end" Gradient="to bottom, rgba(0,0,0,.1), rgba(0,0,0,.5)" Height=150>
+                        @if (!string.IsNullOrWhiteSpace(item.FirstTitle))
+                        {
+                            <MToolbarTitle Class="ml-0 mt-1 mb-1 pt-0 pb-0 pl-2 text-h6 white--text bg-black bg-opacity-25">
+                                <MButton class="ma-2 white--text" Color="rgba(0,0,0,0.6);" Rounded Href="@item.FirstUrl">
+                                    @item.FirstTitle
+                                </MButton>
+                            </MToolbarTitle>
+                        }
                     </MImage>
 
                     <MCardActions>
-                        <a class="info-title" href="@tool.Url">@tool.Title</a>
-                        @*<MSpacer></MSpacer>
-                        @*<a href="@tool.Url">@T("ToolsGo")</a>*@
-                       @* <MButton Color="primary" NoGutter Text Rounded Href="@tool.Url">
-                            @T("ToolsGo")
-                        </MButton>*@
+                        @if (!string.IsNullOrWhiteSpace(item.SecondTitle))
+                        {
+                            <MButton Color="black" NoGutter Text Rounded Href="@item.SecondUrl">
+                                @item.SecondTitle
+                            </MButton>
+                        }
                     </MCardActions>
                 </MCard>
             </MCol>
@@ -46,16 +51,3 @@
         return MainLayout?.T(key) ?? string.Empty;
     }
 }
-
-<style>
-    .info-category {
-          color: #fff;
-          font-size: 11px;
-          text-decoration: none;
-      }
-    .info-title {
-        color: #999;
-        font-size: 11px;
-        text-decoration: none;
-    }
-</style>
