--- a/src/Dotnet9.Tools.Web/Shared/Public/PublicCategorySidebar.razor
+++ b/src/Dotnet9.Tools.Web/Shared/Public/PublicCategorySidebar.razor
@@ -1,8 +1,7 @@
 ﻿@using Dotnet9.Tools.Web.Models
 @using Newtonsoft.Json
+<MList Subheader TwoLine Dense>
 
-<MList Subheader TwoLine>
-    
     <MSubheader Inset>@T("Tools")</MSubheader>
 
     @if (_toolItems != null)
