--- a/src/Dotnet9.Tools.Web/Pages/Public/Blogs/Category.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Blogs/Category.razor
@@ -3,6 +3,8 @@
 @using Dotnet9.Tools.Web.Models
 @layout DocLayout
 
+<h1 style="text-align: center">@T("Blog")</h1>
+
 <CardItemList Title="@T("Category")" Items="_items"></CardItemList>
 
 @code {
@@ -24,15 +26,19 @@
     {
         if (string.IsNullOrWhiteSpace(Slug))
         {
-            _items = ConstDatas.CategoryNotTreeItems!.Select(x => new CardItem(x.Name, "No description", "https://api.ixiaowai.cn/gqapi/gqapi.php", $"/cat/{x.Slug}")).ToList();
+            _items = ConstDatas.CategoryNotTreeItems!.Select(x => new CardItem(secondTitle: x.Name, secondUrl: $"/cat/{x.Slug}")).ToList();
         }
         else
         {
             var category = ConstDatas.CategoryNotTreeItems!.FirstOrDefault(x => x.Slug == Slug);
             if (category == null) return;
 
-            var posts = ConstDatas.BlogPostItems!.FindAll(x => x.Categories.Contains(category.Name));
-            _items = posts.Select(x => new CardItem(x.Title, x.Description, x.Cover, $"/post/{x.Slug}")).ToList();
+            var posts = ConstDatas.BlogPostItems!.FindAll(x => x.Categories!.Contains(category.Name));
+            _items = posts.Select(x =>
+            {
+                var category = ConstDatas.CategoryNotTreeItems.FirstOrDefault(c => c.Name == x.Categories![0]);
+                return new CardItem(category!.Name, $"/cat/{category.Slug}", x.Title, $"/post/{x.Slug}", x.Cover);
+            }).ToList();
         }
         await base.OnParametersSetAsync();
     }
