fix navigate directory; fix page h1 title;

--- a/src/Dotnet9.Tools.Web/Pages/Public/Blogs/Album.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Blogs/Album.razor
@@ -3,7 +3,7 @@
 @using Dotnet9.Tools.Web.Models
 @layout DocLayout
 
-<h1 style="text-align: center">@T("Album")</h1>
+<h1 class="entry-title">@T("Album")</h1>
 
 <CardItemList Title="@T("Album")" Items="_items"></CardItemList>
 
