--- a/src/Dotnet9.Tools.Web/Pages/Public/Tools/ImageTools/IcoTool.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Tools/ImageTools/IcoTool.razor
@@ -6,7 +6,7 @@
 
 <PageTitle>@T("Dotnet9ToolsTitle") - @T("IcoToolTitle")</PageTitle>
 
-<h2 style="margin-bottom: 10px; margin-top: 10px; text-align: center;">@T("IcoToolTitle")</h2>
+<h1 class="entry-title">@T("IcoToolTitle")</h1>
 
 <MRow>
     <MCol>
