--- a/src/Dotnet9.Tools.Web/Pages/Public/Tools/TimeTools/TimestampTool.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Tools/TimeTools/TimestampTool.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>@T("Dotnet9ToolsTitle") - @T("TimestampToolTitle")</PageTitle>
 
-<h2 style="margin-bottom: 10px; margin-top: 10px; text-align: center;">@T("TimestampToolDesc")</h2>
+<h1 class="entry-title">@T("TimestampToolDesc")</h1>
 
 <MRow>
     @T("TimestampToolDateNow") @DateToTimestamp(DateTime.Now, TimestampKind.Seconds)
