--- a/src/Dotnet9.Tools.Web/Pages/Public/Tools/ToolIndex.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Tools/ToolIndex.razor
@@ -3,7 +3,7 @@
 @using Dotnet9.Tools.Web.Shared.Public
 @layout DocLayout
 
-<h1 style="text-align: center">@T("Tools")</h1>
+<h1 class="entry-title">@T("Tools")</h1>
 
 <CardItemList Title="@T("Tools")" Items="_tools"/>
 
