--- a/src/Dotnet9.Tools.Web/wwwroot/css/app.css
+++ b/src/Dotnet9.Tools.Web/wwwroot/css/app.css
@@ -638,3 +638,11 @@ body { font-family: Roboto, 'Microsoft YaHei'; }
     height: 24px !important;
     width: 24px !important;
 }
+
+.entry-title {
+    font-size: 24px;
+    line-height: 1.4;
+    margin-bottom: 20px;
+    margin-top: 0;
+    text-align: center;
+}
