--- a/src/Dotnet9.Tools.Web/Pages/Public/About.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/About.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>@T("About") - @T("Dotnet9ToolsTitle")</PageTitle>
 
-<h1 style="text-align: center">@T("About")</h1>
+<h1 class="entry-title">@T("About")</h1>
 
 <D9Markdown LocalPostFilePath="wwwroot/doc/README-zh_CN.md"/>
 
