--- a/src/Dotnet9.Tools.Web/Pages/Public/Blogs/Category.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Blogs/Category.razor
@@ -3,7 +3,7 @@
 @using Dotnet9.Tools.Web.Models
 @layout DocLayout
 
-<h1 style="text-align: center">@T("Blog")</h1>
+<h1 class="entry-title">@T("Blog")</h1>
 
 <CardItemList Title="@T("Category")" Items="_items"></CardItemList>
 
