--- a/src/Dotnet9.Tools.Web/Pages/Public/Tools/TimeTools/TimestampTool.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Tools/TimeTools/TimestampTool.razor
@@ -1,5 +1,7 @@
 ﻿@page "/timestamp"
 @using Dotnet9.Tools.Web.Shared.Public
+@using Microsoft.AspNetCore.Components
+@using BlazorComponent
 @layout DocLayout
 
 <PageTitle>@T("Dotnet9ToolsTitle") - @T("TimestampToolTitle")</PageTitle>
@@ -10,32 +12,28 @@
     @T("TimestampToolDateNow") @DateToTimestamp(DateTime.Now, TimestampKind.Seconds)
 </MRow>
 <MRow>
-    <MTextField Label="@T("TimestampToolTimestamp")" TValue="long" @bind-Value="@_timestamp1"/>
-    <MSelect @bind-Value="@_kindValue1"
-             Label="@T("TimestampToolTimestampKind")"
-             Items="@_items"
-             ItemText="u => u.Label"
-             ItemValue="u => u.Value"
-             Class="mx-3"
-             MenuProps="props => props.OffsetY = true">
-    </MSelect>
-    <MButton OnClick="@Convert1">@T("TimestampToolConvert")</MButton>
-    <MTextField Label="@T("TimestampToolBeijingTime")"
+    <MTextField Style="max-width: 200px;" Label="@T("TimestampToolTimestamp")" TValue="long" @bind-Value="@_timestamp1"/>
+    <div style="display:flex;">
+        <MRadioGroup TValue="TimestampKind" @bind-Value="_kindValue1" Row>
+            <MRadio Value="TimestampKind.Seconds" Label="@T("TimestampToolKindSeconds")"></MRadio>
+            <MRadio Value="TimestampKind.Milliseconds" Label="@T("TimestampToolKindMilliseconds")"></MRadio>
+        </MRadioGroup>
+    </div>
+    <MButton Class="mx-3 white--text" Color="blue-grey" OnClick="@Convert1">@T("TimestampToolConvert")</MButton>
+    <MTextField Label="@T("TimestampToolBeijingTime")" Style="max-width: 200px;" 
                 TValue="string" @bind-Value="@_datetime1"
                 Class="ml-3"/>
 </MRow>
 <MRow>
-    <MTextField Label="@T("TimestampToolBeijingTime")" TValue="string" @bind-Value="@_datetime2"/>
-    <MButton Class="mx-3" OnClick="@Convert2">@T("TimestampToolConvert")</MButton>
-    <MTextField Label="@T("TimestampToolTimestamp")" TValue="long" @bind-Value="@_timestamp2"/>
-    <MSelect @bind-Value="@_kindValue2"
-             Label="@T("TimestampToolTimestampKind")"
-             Items="@_items"
-             ItemText="u => u.Label"
-             ItemValue="u => u.Value"
-             MenuProps="props => props.OffsetY = true"
-             Class="ml-3">
-    </MSelect>
+    <MTextField Label="@T("TimestampToolBeijingTime")" TValue="string" @bind-Value="@_datetime2" Style="max-width: 200px;" />
+    <MButton Class="mx-3 white--text" Color="blue-grey" OnClick="@Convert2">@T("TimestampToolConvert")</MButton>
+    <MTextField Label="@T("TimestampToolTimestamp")" TValue="long" @bind-Value="@_timestamp2" Style="max-width: 200px;" />
+    <div style="display:flex;">
+        <MRadioGroup TValue="TimestampKind" @bind-Value="_kindValue2" Row>
+            <MRadio Value="TimestampKind.Seconds" Label="@T("TimestampToolKindSeconds")"></MRadio>
+            <MRadio Value="TimestampKind.Milliseconds" Label="@T("TimestampToolKindMilliseconds")"></MRadio>
+        </MRadioGroup>
+    </div>
 </MRow>
 
 <ToolMarkdown
@@ -56,12 +54,8 @@
     private TimestampKind _kindValue1;
     private TimestampKind _kindValue2;
 
-    private readonly List<TimestampItem> _items = new();
-
     protected override async Task OnInitializedAsync()
     {
-        _items.Add(new TimestampItem(T("TimestampToolKindSeconds"), TimestampKind.Seconds));
-        _items.Add(new TimestampItem(T("TimestampToolKindMilliseconds"), TimestampKind.Milliseconds));
         _currentDatetime = DateTime.Now;
         _timestamp1 = _timestamp2 = await DateToTimestamp(_currentDatetime, TimestampKind.Seconds);
         _datetime1 = _datetime2 = _currentDatetime.ToString("yyyy-MM-dd HH:mm:ss");
